paser.output
Nonterminals useless in grammar

   deflist


Rules useless in grammar

   60 VarDec: ID deflist

   61 deflist: LB INT RB deflist


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: /* empty */
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt
   25     | SWITCH LP Exp RP LC switchStmt RC

   26 switchStmt: CASE INT COLON StmList switchStmt
   27           | DEFAULT COLON StmList

   28 DefList: /* empty */
   29        | Def DefList

   30 Def: Specifier DecList SEMI

   31 DecList: Dec
   32        | Dec COMMA DecList

   33 Dec: VarDec
   34    | VarDec ASSIGNOP Exp

   35 Var: ID
   36    | ID list

   37 list: LB Exp RB list
   38     | LB Exp RB

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LP Exp RP
   48    | MINUS Exp
   49    | NOT Exp
   50    | ID LP Args RP
   51    | ID LP RP
   52    | Var
   53    | INT
   54    | AUTOADD Exp
   55    | AUTOSUB Exp
   56    | Exp AUTOADD
   57    | Exp AUTOSUB

   58 Args: Exp COMMA Args
   59     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 26 53
ID (259) 10 11 12 35 36 50 51
RELOP (260) 42
TYPE (261) 7
LP (262) 11 12 22 23 24 25 47 50 51
RP (263) 11 12 22 23 24 25 47 50 51
LB (264) 37 38
RB (265) 37 38
LC (266) 16 25
RC (267) 16 25
SEMI (268) 4 6 19 21 30
COMMA (269) 9 14 32 58
COLON (270) 26 27
DEFAULT (271) 27
PLUS (272) 43
MINUS (273) 44 48
STAR (274) 45
DIV (275) 46
ASSIGNOP (276) 34 39
AND (277) 40
OR (278) 41
NOT (279) 49
IF (280) 22 23
ELSE (281) 23
WHILE (282) 24
RETURN (283) 21
SWITCH (284) 25
CASE (285) 26
AUTOADD (286) 54 56
AUTOSUB (287) 55 57
UMINUS (288)
LOWER_THEN_ELSE (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
ExtDefList (37)
    on left: 2 3, on right: 1 3
ExtDef (38)
    on left: 4 5 6, on right: 3
Specifier (39)
    on left: 7, on right: 4 5 15 30
ExtDecList (40)
    on left: 8 9, on right: 4 9
VarDec (41)
    on left: 10, on right: 8 9 15 33 34
FuncDec (42)
    on left: 11 12, on right: 5
VarList (43)
    on left: 13 14, on right: 11 14
ParamDec (44)
    on left: 15, on right: 13 14
CompSt (45)
    on left: 16, on right: 5 20
StmList (46)
    on left: 17 18, on right: 16 18 26 27
Stmt (47)
    on left: 19 20 21 22 23 24 25, on right: 18 22 23 24
switchStmt (48)
    on left: 26 27, on right: 25 26
DefList (49)
    on left: 28 29, on right: 16 29
Def (50)
    on left: 30, on right: 29
DecList (51)
    on left: 31 32, on right: 30 32
Dec (52)
    on left: 33 34, on right: 31 32
Var (53)
    on left: 35 36, on right: 52
list (54)
    on left: 37 38, on right: 36 37
Exp (55)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57, on right: 19 21 22 23 24 25 34 37 38 39 40 41 42 43 44 45 46
    47 48 49 54 55 56 57 58 59
Args (56)
    on left: 58 59, on right: 50 58


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


state 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


state 17

   16 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 25
    DefList    go to state 26
    Def        go to state 27


state 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


state 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 28


state 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 29


state 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 30

    $default  reduce using rule 13 (VarList)


state 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


state 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 25

   30 Def: Specifier . DecList SEMI

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 32
    Dec      go to state 33


state 26

   16 CompSt: LC DefList . StmList RC

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    LC       shift, and go to state 17
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    IF       shift, and go to state 39
    WHILE    shift, and go to state 40
    RETURN   shift, and go to state 41
    SWITCH   shift, and go to state 42
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 45
    StmList  go to state 46
    Stmt     go to state 47
    Var      go to state 48
    Exp      go to state 49


state 27

   29 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 28 (DefList)

    Specifier  go to state 25
    DefList    go to state 50
    Def        go to state 27


state 28

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


state 29

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


state 30

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 51
    ParamDec   go to state 22


state 31

   33 Dec: VarDec .
   34    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 52

    $default  reduce using rule 33 (Dec)


state 32

   30 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 53


state 33

   31 DecList: Dec .
   32        | Dec . COMMA DecList

    COMMA  shift, and go to state 54

    $default  reduce using rule 31 (DecList)


state 34

   53 Exp: INT .

    $default  reduce using rule 53 (Exp)


state 35

   35 Var: ID .
   36    | ID . list
   50 Exp: ID . LP Args RP
   51    | ID . LP RP

    LP  shift, and go to state 55
    LB  shift, and go to state 56

    $default  reduce using rule 35 (Var)

    list  go to state 57


state 36

   47 Exp: LP . Exp RP

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 58


state 37

   48 Exp: MINUS . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 59


state 38

   49 Exp: NOT . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 60


state 39

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 61


state 40

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 62


state 41

   21 Stmt: RETURN . Exp SEMI

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 63


state 42

   25 Stmt: SWITCH . LP Exp RP LC switchStmt RC

    LP  shift, and go to state 64


state 43

   54 Exp: AUTOADD . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 65


state 44

   55 Exp: AUTOSUB . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 66


state 45

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


state 46

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 67


state 47

   18 StmList: Stmt . StmList

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    LC       shift, and go to state 17
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    IF       shift, and go to state 39
    WHILE    shift, and go to state 40
    RETURN   shift, and go to state 41
    SWITCH   shift, and go to state 42
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 45
    StmList  go to state 68
    Stmt     go to state 47
    Var      go to state 48
    Exp      go to state 49


state 48

   52 Exp: Var .

    $default  reduce using rule 52 (Exp)


state 49

   19 Stmt: Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   56    | Exp . AUTOADD
   57    | Exp . AUTOSUB

    RELOP     shift, and go to state 69
    SEMI      shift, and go to state 70
    PLUS      shift, and go to state 71
    MINUS     shift, and go to state 72
    STAR      shift, and go to state 73
    DIV       shift, and go to state 74
    ASSIGNOP  shift, and go to state 75
    AND       shift, and go to state 76
    OR        shift, and go to state 77
    AUTOADD   shift, and go to state 78
    AUTOSUB   shift, and go to state 79


state 50

   29 DefList: Def DefList .

    $default  reduce using rule 29 (DefList)


state 51

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


state 52

   34 Dec: VarDec ASSIGNOP . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 80


state 53

   30 Def: Specifier DecList SEMI .

    $default  reduce using rule 30 (Def)


state 54

   32 DecList: Dec COMMA . DecList

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 81
    Dec      go to state 33


state 55

   50 Exp: ID LP . Args RP
   51    | ID LP . RP

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    RP       shift, and go to state 82
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var   go to state 48
    Exp   go to state 83
    Args  go to state 84


state 56

   37 list: LB . Exp RB list
   38     | LB . Exp RB

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 85


state 57

   36 Var: ID list .

    $default  reduce using rule 36 (Var)


state 58

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   47    | LP Exp . RP
   56    | Exp . AUTOADD
   57    | Exp . AUTOSUB

    RELOP     shift, and go to state 69
    RP        shift, and go to state 86
    PLUS      shift, and go to state 71
    MINUS     shift, and go to state 72
    STAR      shift, and go to state 73
    DIV       shift, and go to state 74
    ASSIGNOP  shift, and go to state 75
    AND       shift, and go to state 76
    OR        shift, and go to state 77
    AUTOADD   shift, and go to state 78
    AUTOSUB   shift, and go to state 79


state 59

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   48    | MINUS Exp .
   56    | Exp . AUTOADD
   57    | Exp . AUTOSUB

    AUTOADD  shift, and go to state 78
    AUTOSUB  shift, and go to state 79

    $default  reduce using rule 48 (Exp)


state 60

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | NOT Exp .
   56    | Exp . AUTOADD
   57    | Exp . AUTOSUB

    AUTOADD  shift, and go to state 78
    AUTOSUB  shift, and go to state 79

    $default  reduce using rule 49 (Exp)


state 61

   22 Stmt: IF LP . Exp RP Stmt
   23     | IF LP . Exp RP Stmt ELSE Stmt

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 87


state 62

   24 Stmt: WHILE LP . Exp RP Stmt

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 88


state 63

   21 Stmt: RETURN Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   56    | Exp . AUTOADD
   57    | Exp . AUTOSUB

    RELOP     shift, and go to state 69
    SEMI      shift, and go to state 89
    PLUS      shift, and go to state 71
    MINUS     shift, and go to state 72
    STAR      shift, and go to state 73
    DIV       shift, and go to state 74
    ASSIGNOP  shift, and go to state 75
    AND       shift, and go to state 76
    OR        shift, and go to state 77
    AUTOADD   shift, and go to state 78
    AUTOSUB   shift, and go to state 79


state 64

   25 Stmt: SWITCH LP . Exp RP LC switchStmt RC

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 90


state 65

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   54    | AUTOADD Exp .
   56    | Exp . AUTOADD
   57    | Exp . AUTOSUB

    AUTOADD  shift, and go to state 78
    AUTOSUB  shift, and go to state 79

    $default  reduce using rule 54 (Exp)


state 66

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   55    | AUTOSUB Exp .
   56    | Exp . AUTOADD
   57    | Exp . AUTOSUB

    AUTOADD  shift, and go to state 78
    AUTOSUB  shift, and go to state 79

    $default  reduce using rule 55 (Exp)


state 67

   16 CompSt: LC DefList StmList RC .

    $default  reduce using rule 16 (CompSt)


state 68

   18 StmList: Stmt StmList .

    $default  reduce using rule 18 (StmList)


state 69

   42 Exp: Exp RELOP . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 91


state 70

   19 Stmt: Exp SEMI .

    $default  reduce using rule 19 (Stmt)


state 71

   43 Exp: Exp PLUS . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 92


state 72

   44 Exp: Exp MINUS . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 93


state 73

   45 Exp: Exp STAR . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 94


state 74

   46 Exp: Exp DIV . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 95


state 75

   39 Exp: Exp ASSIGNOP . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 96


state 76

   40 Exp: Exp AND . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 97


state 77

   41 Exp: Exp OR . Exp

    INT      shift, and go to state 34
    ID       shift, and go to state 35
    LP       shift, and go to state 36
    MINUS    shift, and go to state 37
    NOT      shift, and go to state 38
    AUTOADD  shift, and go to state 43
    AUTOSUB  shift, and go to state 44

    Var  go to state 48
    Exp  go to state 98


state 78

   56 Exp: Exp AUTOADD .
